# json-crud-engine

./: LICENSE  README.md  gladiator.py  setup.cfg  t.py  v.py
database/: enemy.json  player.json
engine/: engine.py  leng.py
engine/char/: char.py  quick.py
src/jsonengine/: __init__.py  main.py
src/jsonengine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
