[metadata]
name = jsonengine
version = 1.0.5
author = YouHeng Zhou
author_email = youhengzhou@cmail.carleton.ca
description = A package for a python JSON database CRUD engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/youhengzhou/json-crud-engine
project_urls =
    Bug Tracker = https://github.com/youhengzhou/json-crud-engine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
